--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -48,27 +48,27 @@
 
         **"The Impact of Masks on Assessments of Facial Expressions of Pain"**
 
-          - Troy Dildine, Ph.D. candidate, Neuroscience, National Institutes of Health and Karolinska Institutet & SICSS-Howard/Mathematica 2021 alum
+          - Troy Dildine, Ph.D. candidate, Neuroscience, National Institutes of Health and Karolinska Institutet & SICSS-Howard/Mathematica 2021 alumni
 
-          - Regina Ebo, Ph.D. candidate, Psychology, UC Berkeley & SICSS-Howard/Mathematica 2021 alum
+          - Regina Ebo, Ph.D. candidate, Psychology, UC Berkeley & SICSS-Howard/Mathematica 2021 alumni
 
-          - Yondu Mori, Ph.D. candidate, Communication Sciences and Disorders, McGill University & SICSS-Howard/Mathematica 2021 alum
-
-          - Rashun Miles, Ph.D. candidate, Social Welfare, University of Mississippi & SICSS-Howard/Mathematica 2021 alum
-                
+          - Rashun Miles, Ph.D. candidate, Social Welfare, University of Mississippi & SICSS-Howard/Mathematica 2021 alumni
+          
+          - Yondu Mori, Ph.D. candidate, Communication Sciences and Disorders, McGill University & SICSS-Howard/Mathematica 2021 alumni
+           
                 
 
         **"Global Crowns: Emotions Surrounding Natural Hair of Black Women around the Globe"** 
 
-          - Nicole Jenkins, Assistant Professor, Department of Sociology and Criminology, Howard University & SICSS-Howard/Mathematica 2021 alum
+          - Nicole Jenkins, Assistant Professor, Department of Sociology and Criminology, Howard University & SICSS-Howard/Mathematica 2021 alumni
 
-          - Yash Tadimalla, Ph.D. candidate, Interdisciplinary track in the College of Computing and Informatics, University of North Carolina & SICSS-Howard/Mathematica 2021 alum
+          - Yash Tadimalla, Ph.D. candidate, Interdisciplinary track in the College of Computing and Informatics, University of North Carolina & SICSS-Howard/Mathematica 2021 alumni
 
 
 
         **"Pre-service Sentiment: Analyzing Transcripts from a Student Avatar Experiment in Classroom Management Simulations"**
 
-          - Todd Hall, Ph.D. candidate, Education Policy, University of Virginia & SICSS-Howard/Mathematica 2021 alum
+          - Todd Hall, Ph.D. candidate, Education Policy, University of Virginia & SICSS-Howard/Mathematica 2021 alumni
 
           - Vivian Wong, Ph.D., Associate Professor, School of Education and Human Development, University of Virginia
          
@@ -76,7 +76,7 @@
          
         **Moderator**
     
-          - Naniette Coleman, Ph.D. candidate, Sociology, UC Berkeley, SICSS-Howard/Mathematica Founder/Organizer 2020-present, & SICSS-Princeton alum 2019'
+          - Naniette Coleman, Ph.D. candidate, Sociology, UC Berkeley, SICSS-Howard/Mathematica Founder/Organizer 2020-present, & SICSS-Princeton alumni 2019'
           
 
     - name: "12:00 - 2:00 Open Office Hours with Organizers (*Zoom*), or SICSS-Howard/Mathematica Exclusive Content Review (on your own), or Pre-Arrival Material Review (on your own)
@@ -99,7 +99,7 @@
 
           - Terri Adams, Ph.D., Faculty Co-Sponsor & Professor, Department of Sociology and Criminology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology, Howard University [(video)](https://youtu.be/2R_w-PQbPD0)
 
-          - Nicole Jenkins, Ph.D., Assistant Professor, Department of Sociology and Criminology, Howard University & SICSS-Howard/Mathematica alum 2021
+          - Nicole Jenkins, Ph.D., Assistant Professor, Department of Sociology and Criminology, Howard University & SICSS-Howard/Mathematica alumni 2021
           
           - Amy Yeboah Quarkume, Ph.D., Associate Professor, Africana Studies, Department of Afro-American Studies, Howard University
 
@@ -107,7 +107,7 @@
 
           - Akira Bell, Event Co-Sponsor & Senior Vice President; Chief Information Officer, Mathematica [(video)](https://youtu.be/BVRDqmDMT-0)
 
-          - Naniette Coleman, Ph.D. candidate, Sociology, UC Berkeley, SICSS-Howard/Mathematica Founder/Organizer 2020-present, & SICSS-Princeton alum 2019 [(website)](https://www.naniettecoleman.com/)
+          - Naniette Coleman, Ph.D. candidate, Sociology, UC Berkeley, SICSS-Howard/Mathematica Founder/Organizer 2020-present, & SICSS-Princeton alumni 2019 [(website)](https://www.naniettecoleman.com/)
                 
               
    
@@ -149,17 +149,17 @@
     
         **Speakers**
       
-          - Janeria Easley, Ph.D., Assistant professor, Department of African American Studies, Emory University & SICSS-Howard/Mathematica 2021 alum
+          - Janeria Easley, Ph.D., Assistant professor, Department of African American Studies, Emory University & SICSS-Howard/Mathematica 2021 alumni
 
-          - Felix Owusu, Ph.D., Postdoctoral Research Fellow, Program in Criminal Justice Policy and Management, Harvard University & SICSS-Howard/Mathematica 2021 alum
+          - Felix Owusu, Ph.D., Postdoctoral Research Fellow, Program in Criminal Justice Policy and Management, Harvard University & SICSS-Howard/Mathematica 2021 alumni
 
-          - Maxine Van Doren, Ph.D. student, Linguistics, UC San Diego & SICSS-Howard/Mathematica 2021 alum
+          - Maxine Van Doren, Ph.D. student, Linguistics, UC San Diego & SICSS-Howard/Mathematica 2021 alumni
 
 
           
         **Moderator**
       
-          - Naniette Coleman, Ph.D. candidate, Sociology, UC Berkeley, SICSS-Howard/Mathematica Founder/Organizer 2020-present, & SICSS-Princeton alum 2019'
+          - Naniette Coleman, Ph.D. candidate, Sociology, UC Berkeley, SICSS-Howard/Mathematica Founder/Organizer 2020-present, & SICSS-Princeton alumni 2019'
           
         
     - name: "1:00 - 1:30 Break"
@@ -332,7 +332,7 @@
           
         **Moderator**
       
-          - Naniette Coleman, Ph.D. candidate, Sociology, UC Berkeley, SICSS-Howard/Mathematica Founder/Organizer 2020-present, & SICSS-Princeton alum 2019'
+          - Naniette Coleman, Ph.D. candidate, Sociology, UC Berkeley, SICSS-Howard/Mathematica Founder/Organizer 2020-present, & SICSS-Princeton alumni 2019'
         
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
