--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -94,7 +94,7 @@ Broadcasts, 2002-2020"
     - name: "12:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:30 Group Projects"
     - name: "16:30 - 17:00 Coffee Break"
-    - name: "17:00 - 18:30 [Guillaume Hollard](https://sites.google.com/site/webpagehollard/): TBA"
+    - name: "17:00 - 18:30 [Étienne Ollion](www.ollion.cnrs.fr): The Augmented Social Scientist"
     - name: "19:00 - 22:00 Farewell Dinner"
     
 - date: 2022-07-01
