--- a/_data/2022/duke/schedule.yml
+++ b/_data/2022/duke/schedule.yml
@@ -7,8 +7,8 @@
 - date: 2022-06-20
   name: Introduction and Ethics
   events:
-    - name: "9:00 - 9:15 Logistics (*Not open to public/No livestream*)"
-    - name: "9:15 - 9:30 Introductions (*Not open to public/No livestream*)"
+    - name: "9:00 - 9:15 Logistics"
+    - name: "9:15 - 9:30 Introductions"
     - name: "9:30 - 11:00 Chris Bail (Duke University)"
     - name: "11:00 - 11:15 Coffee Break"
     - name: "11:15 - 12:00 Chris Bail continued"
@@ -23,9 +23,9 @@
   name: APIs and Digital Trace Data
   events:
     - name: "9:00 - 9:15 Check In"
-    - name: "9:15 - 10:30 Speaker 1: Suhem Parack (Twitter)"
+    - name: "9:15 - 10:30 Suhem Parack (Twitter)"
     - name: "10:30 - 10:45 Coffee Break"
-    - name: "10:45 - 12:00 Speaker 2: Ridhi Kashyap (Oxford University)"
+    - name: "10:45 - 12:00 Ridhi Kashyap (Oxford University)"
     - name: "12:00 - 1:00 Lunch"
     - name: "1:00 - 2:30 Group Exercises"
     - name: "2:30 - 3:00 Break"
@@ -37,9 +37,9 @@
   name: Text as Data
   events:
     - name: "9:00 - 9:15 Check In"
-    - name: "9:15 - 10:30 Speakers: Justin Grimmer (Stanford University) & Brandon Stewart (Princeton University)"
+    - name: "9:15 - 10:30 Justin Grimmer (Stanford University) & Brandon Stewart (Princeton University): Representing Text as Data"
     - name: "10:30 - 10:45 Coffee Break"
-    - name: "10:45 - 12:00 Justin Grimmer & Brandon Stewart continued"
+    - name: "10:45 - 12:00 Justin Grimmer & Brandon Stewart: Measurement and Causal Inference using Text as Data"
     - name: "12:00 - 1:00 Lunch"
     - name: "1:00 - 2:30 Group Exercises"
     - name: "2:30 - 3:00 Break"
@@ -67,7 +67,7 @@
     - name: "9:00 - 9:15 Check In"
     - name: "9:15 - 11:00 Speaker TBD"
     - name: "11:00 - 11:15 Coffee Break"
-    - name: "11:15 - 12:00 Speaker Continued"
+    - name: "11:15 - 12:00 Speaker TBD"
     - name: "12:00 - 1:00 Lunch"
     - name: "1:00 - 2:30 Group Exercises"
     - name: "2:30 - 3:00 Break"
@@ -88,7 +88,7 @@
     - name: "9:15 - 9:30 Introduction to Research Speed Dating Activity"
     - name: "9:30 - 11:00 Research Speed Dating"
     - name: "11:00 - 11:15 Coffee Break"
-    - name: "11:15 - 12:00 Research Speed Dating Continued"
+    - name: "11:15 - 12:00 Research Speed Dating Activity"
     - name: "12:00 - 1:00 Lunch"
     - name: "1:00 - 2:30 Project Group Formation"
     - name: "2:30 - 3:00 Break"
@@ -102,7 +102,7 @@
     - name: "9:00 - 9:15 Check In"
     - name: "9:15 - 11:00 Group Projects Work"
     - name: "11:00 - 11:15 Coffee Break"
-    - name: "11:15 - 12:00 Group Projects Work Continued"
+    - name: "11:15 - 12:00 Group Projects Work"
     - name: "12:00 - 1:00 Lunch"
     - name: "1:00 - 2:30 Group Projects Work"
     - name: "2:30 - 3:00 Break"
@@ -123,12 +123,7 @@
     - name: "3:00 - 4:30 Group Project Final Presentations"
     - name: "4:30 - 5:00 Wrap Up"
     - name: "5:00 - 7:00 Farewell Dinner"
-    - name: "6:00 - 7:00 Dinner"
   
 - date: 2022-06-30
-  events:
-    - name: "Participants depart"
-  
-- date: 2018-06-30
   events:
     - name: "Participants depart"
