--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -31,6 +31,6 @@
   bio: "Maria Litova is a research assistant at the Centre for Social Data Science, University of Helsinki, Finland. She got her first Master’s degree in Sociology and currently is a Master’s student at the University of Helsinki with major in Social Data Science. Maria is interested in natural language processing, machine learning, healthcare and medical data analysis, youth research and well-being issues."
 
 - name: Brooke Molokach
-  image: /assets/images/Brooke_Molokach.jpeg
+  image: /assets/images/Brooke_Molokach.jpg
   bio: "Brooke Molokach is a PhD student at the University of Delaware, researching the narrative features of political communication and societal fragmentation. Her interests include network dynamics, agent-based modeling, and natural language processing. Brooke holds an MA in International Affairs from American University and a BA from Yale University."
   
