--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -248,7 +248,9 @@
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #4: Research Data Management Team (UC Berkeley) [(video)](https://youtu.be/MqMExgnNa4E) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
         
-        - [Erin D. Foster, Service Lead, Research Data Management Program, UC Berkeley](https://researchdata.berkeley.edu/people/erin-foster)  
+        - [Erin D. Foster, Service Lead, Campus-Wide Research Data Management Program, UC Berkeley](https://researchdata.berkeley.edu/people/erin-foster)  
+        
+        - [Chris Hoffman, Director, Campus-Wide Research Data Management Program. UC Berkeley](https://research-it.berkeley.edu/chris-hoffman)
         
         - [Anna Sackmann, Science Data & Engineering Librarian, UC Berkeley](https://researchdata.berkeley.edu/people/anna-sackmann)"
         
@@ -361,7 +363,7 @@
     - name: "10:30 - 12:00 Work on group projects (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #7: Africa Center for Strategic Studies (video) (LIVE Q+A) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (video) (*Zoom*)
         
-        - [Mark Duerksen, Ph.D., Research associate, Africa Center for Strategic Studies](https://africacenter.org/experts/dr-mark-duerksen/)" 
+        - [Mark Duerksen, Ph.D., Research Associate, Africa Center for Strategic Studies](https://africacenter.org/experts/dr-mark-duerksen/)" 
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
     - name: "4:00 - 5:30 [Shawndra Hill, Ph.D., Senior lecturer, Marketing, Columbia Business School & Principal Scientist at Facebook in the Core Data Science Team](https://www8.gsb.columbia.edu/cbs-directory/detail/sbh2146), (Title TBA) (video) - LIVE session to include Q&A and office hour (*Zoom*)"
