--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -117,6 +117,11 @@ panels:
       bio: "Dr Bhaso Ndzendze is a Senior Lecturer and Head of Department: Politics and International Relations at the University of Johannesburg. Dr Ndzendze is also founder and head of the 4IR and Digital Policy Research Unit at the University of Johannesburg, and a digital policy fellow at the Berlin-based African Policy Research Institute. He is author of two books on artificial intelligence and international relations and is editor in chief of the journal Digital Policy Studies. His scholarship and opinion on technology, society and digital policy has appeared in numerous edited books and the press."
       website: https://bhasondzendze.co.za/ 
       
+    - name: Felicia Odamtten
+      image: /assets/images/Felicia_Odamtten.png
+      bio: "Felicia is the Founder and Director of The Black Economists Network (T-BEN). As director, Felicia has overseen the meteoric growth in membership of T-BEN and formed strategic alliances with reputable private and public sector organisations both national and internationally, including The Royal Economic Society, Government Economic Service (UK), the Sadie Collective (USA) etc. She is also an Economist at the Resolution Foundation and was previously a fast stream Economist in the UK Government’s accelerated leadership development programme for talented graduates. Felicia is an accomplished public speaker who has sat on numerous panels and shared insights in discussions and debates. In 2019, Felicia was appointed by the UK Government Economic Services (GES) as Ambassador for its Civil Service fast stream recruitment scheme. Felicia is passionate about using economics to drive investments and positively impact society and communities. She believes this will support equitable distribution of global resources to improve lives and living conditions of people in developing countries with emphasis on the continent of Africa."
+      website: https://www.tben.co.uk/the-team
+      
     - name: Danielle Olson, Ph.D.
       image: /assets/images/Danielle_Olson.jpeg
       bio: "Dr. Danielle M. Olson is an AI/ML Human Factors Researcher at Apple based in Seattle, WA. She collaborates with technical and creative partners to inform how machine learning-powered products are built at Apple. She leads research to better understand the infinite ways human experiences with technologies can vary so that she can advocate for humans throughout the design and development process."
@@ -194,7 +199,62 @@ lunchtime talks:
 participants: 
   title: Participants
   people:
-   - name: Coming soon...
+    - name: Andrea Adams
+      image: /assets/images/Andrea_Adams.jpg
+      
+    - name: Rafaela Araujo Rodrigues
+      image: /assets/images/Rafaela_Araujo_Rodrigues.jpg
+
+    - name: Nayantara Biswas
+      image: /assets/images/Nayantara_Biswas.jpeg
+    
+    - name: JoVontae Butts
+      image: /assets/images/JoVontae_Butts.jpg
+    
+    - name: Renee Clarke
+      image: /assets/images/Renee_Clarke.jpg
+ 
+    - name: Rumeysanur Erikli Dogan
+      image: /assets/images/Rumeysanur_Erikli_Dogan.jpg
+
+    - name: Grace Flores-Robles
+      image: /assets/images/Grace_Flores-Robles.jpeg
+ 
+    - name: Erica Goto
+      image: /assets/images/Erica_Goto.jpg
+
+    - name: Rebecca Hsu
+      image: /assets/images/Rebecca_Hsu.jpg
+
+    - name: Kristina Lee
+      image: /assets/images/Kristina_Lee.jpeg
+ 
+    - name: Daniel Lobo
+      image: /assets/images/Daniel_Lobo.jpg
+
+    - name: Amber Mackey
+      image: /assets/images/Amber_Mackey.png
+
+    - name: Jeremiah Muhammad
+      image: /assets/images/Jeremiah_Muhammad.jpeg
+
+    - name: Imani Munyaka
+      image: /assets/images/Imani_Munyaka.jpg
+
+    - name: Wan Nurul Naszeerah
+      image: /assets/images/Wan_Nurul_Naszeerah.jpg
+      
+    - name: Getamesay Shiwenzu Nigussie
+      image: /assets/images/Getamesay_Shiwenzu_Nigussie.jpg
+
+    - name: Shadya Sanders
+      image: /assets/images/Shadya_Sanders.jpeg
+
+    - name: Asha Yadav
+      image: /assets/images/Asha_Yadav.jpg
+      
+    - name: Bing-Jie Yen
+      image: /assets/images/Bing-Jie_Yen.png
 
 
 organizers:
