--- a/_data/2022/singapore/schedule.yml
+++ b/_data/2022/singapore/schedule.yml
@@ -11,7 +11,7 @@
   name: Collecting digital trace data
   events:
     - name: "9:00 - 9:55 Morning session"
-    - name: "10:00 - 11:55 Guest lecture (virtual) by Suhem Parack (Twitter): Using the Twitter API for research"
+    - name: "10:00 - 11:55 Guest lecture (virtual) by Suhem Parack (Twitter): Getting started with academic research using the Twitter API v2"
     - name: "12:00 - 13:00 Lunch"
     - name: "13:00 - 17:00 Afternoon session and group activities"
 
