--- a/_data/2022/covenant-university/speakers.yml
+++ b/_data/2022/covenant-university/speakers.yml
@@ -8,6 +8,11 @@
   bio: "<p align='justify'>Diego Alburez-Gutierrez (PhD in Demography, London School of Economics 2018) is a Research Scientist at the Max Planck Institute for Demographic Research, where he specialises in inter-generational demography. His work integrates non-traditional data (e.g., from digital or computational sources) with established demographic sources (e.g. censuses and population registers).</p>"
   website: http://alburez.me/
 
+- name: Stephane Helleringer
+  image: /assets/images/Shelleringer.jpg
+  bio: "<p align='justify'>Stéphane Helleringer is a demographer with interests in a) the development of new methods to measure demographic trends in countries with limited data, and b) measuring the impact of epidemics on population health and mortality. He has conducted several trials of innovative approaches to collecting demographic data (e.g., computer vision). He has also worked extensively on the impact of HIV/AIDS, Polio, and Ebola in several African countries. Helleringer is currently the principal investigator of a multi-country study on adolescent and adult mortality in Malawi, Uganda, Guinea-Bissau, and Bangladesh. He recently initiated a panel study of behavioral change during the COVID-19 pandemic in Malawi. He is a member of the expert group advising the World Health Organization (WHO) on COVID-19 mortality assessment.</p>"
+  website: https://nyuad.nyu.edu/en/academics/divisions/social-science/faculty/stephane-helleringer.html
+
 - name: Suhem Parack
   image: /assets/images/parack2022.jpeg
   bio: "<p align='justify'>Suhem Parack is a Staff Developer Advocate at Twitter. He helps students and academic researchers with their research using the Twitter API. Before joining Twitter, he was a Solutions Architect at Amazon.</p>"
