--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -84,6 +84,37 @@
     
 - date: 2022-06-23
   events:
+    - name: "**09:00-09:15** Housekeeping and Announcements"
+    - name: "**09:15-10:30** Research Happy Hour
+    <br/> 
+    <br/> 
+    Required Readings:
+    
+    - <a href='https://doi.org/10.1371/journal.pone.0250303' target='_blank'>Characterizing low effort responding among young African adults recruited via Facebook advertising</a>
+    
+    - <a href='https://www.sciencedirect.com/science/article/abs/pii/S0378873316300454' target='_blank'>Evaluating sampling biases from third-party reporting as a method for improving survey measures of sensitive behaviors</a>
+    
+    - <a href='https://doi.org/10.1007/s13524-019-00840-z' target='_blank'>Using an online sample to estimate the size of an offline population</a>
+    
+    - <a href='https://doi.org/10.1016/j.ssmph.2021.100836' target='_blank'>A scoping review on the use of machine learning in research on social determinants of health: Trends and research prospects</a>
+    
+    - <a href='https://journals.sagepub.com/doi/abs/10.1177/0886260520960110' target='_blank'>Predicting the vulnerability of women to intimate partner violence in South Africa: Evidence from tree-based machine learning techniques</a>
+    
+    - *YouTube videos:* <a href='https://www.youtube.com/watch?v=j8fJGV17Hcg' target='_blank'>Survey Research in the Digital Age</a>, <a href='https://www.youtube.com/watch?v=SLAi9v5CCnM' target='_blank'>Probability and Non-Probability Sampling</a>, <a href='https://www.youtube.com/watch?v=_vecQs7aB6o' target='_blank'>Combining Surveys and Big Data</a>, <a href='https://www.youtube.com/watch?v=cYyu5Ex0twE' target='_blank'>Moving Beyond Simple Experiments</a>"
+     
+    - name: "**11:30-12:30** Collecting mortality data via mobile phone surveys in countries with limited civil registration and vital statistics (CRVs).
+    <br/> 
+    <br/> 
+    A key goal of HIV prevention and treatment programs worldwide is to end the epidemic of HIV/AIDS by 2030. However, there are limited representative data on HIV/AIDS mortality in many African countries. This presentation will highlight a novel method for collecting representative data on mortality in countries with limited civil registration and vital statistics."
+    - name: "**12:30-13:00** Tutorials"
+    - name: "**13:00-14:00** Lunch"
+    - name: "**14:00-15:30** Tutorial: Machine Learning in R for beginners"
+    - name: "**15:30-18:00** Group Exercises"
+    - name: "**18:00-** Dinner"
+
+
+- date: 2022-06-24
+  events:
     - name: "**09:00-09:15** Housekeeping and Announcements."
     - name: "**09:15-10:30** Research Happy Hour
     <br/> 
@@ -105,38 +136,9 @@
     - name: "**10:30-12:00** Introduction to Internet Search Data."
     - name: "**12:00-13:00** Tutorials"
     - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Tutorials/Flash Talks"
+    - name: "**14:00-15:30** Tutorials: Invited Presentation: Open science and reproducible research in the digital age"
     - name: "**15:30-18:00** Group Exercises"
     - name: "**18:00-** Dinner" 
-
-
-- date: 2022-06-24
-  events:
-    - name: "**09:00-09:15** Housekeeping and Announcements"
-    - name: "**09:15-10:30** Research Happy Hour
-    <br/> 
-    <br/> 
-    Required Readings:
-    
-    - <a href='https://doi.org/10.1371/journal.pone.0250303' target='_blank'>Characterizing low effort responding among young African adults recruited via Facebook advertising</a>
-    
-    - <a href='https://www.sciencedirect.com/science/article/abs/pii/S0378873316300454' target='_blank'>Evaluating sampling biases from third-party reporting as a method for improving survey measures of sensitive behaviors</a>
-    
-    - <a href='https://doi.org/10.1007/s13524-019-00840-z' target='_blank'>Using an online sample to estimate the size of an offline population</a>
-    
-    - <a href='https://doi.org/10.1016/j.ssmph.2021.100836' target='_blank'>A scoping review on the use of machine learning in research on social determinants of health: Trends and research prospects</a>
-    
-    - <a href='https://journals.sagepub.com/doi/abs/10.1177/0886260520960110' target='_blank'>Predicting the vulnerability of women to intimate partner violence in South Africa: Evidence from tree-based machine learning techniques</a>
-    
-    - *YouTube videos:* <a href='https://www.youtube.com/watch?v=j8fJGV17Hcg' target='_blank'>Survey Research in the Digital Age</a>, <a href='https://www.youtube.com/watch?v=SLAi9v5CCnM' target='_blank'>Probability and Non-Probability Sampling</a>, <a href='https://www.youtube.com/watch?v=_vecQs7aB6o' target='_blank'>Combining Surveys and Big Data</a>, <a href='https://www.youtube.com/watch?v=cYyu5Ex0twE' target='_blank'>Moving Beyond Simple Experiments</a>"
-     
-    - name: "**10:30-12:00** Social Survey meets Online Survey || Machine Learning."
-    - name: "**12:00-13:00** Tutorials"
-    - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Invited Presentation: Open science and reproducible research in the digital age"
-    - name: "**15:30-18:00** Group Exercises"
-    - name: "**18:00-** Dinner"
-
 
 - date: 2022-06-27
   events:
