--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -96,19 +96,17 @@
     
     - <a href='https://doi.org/10.1007/s13524-019-00840-z' target='_blank'>Using an online sample to estimate the size of an offline population</a>
     
-    - <a href='https://doi.org/10.1016/j.ssmph.2021.100836' target='_blank'>A scoping review on the use of machine learning in research on social determinants of health: Trends and research prospects</a>
-    
-    - <a href='https://journals.sagepub.com/doi/abs/10.1177/0886260520960110' target='_blank'>Predicting the vulnerability of women to intimate partner violence in South Africa: Evidence from tree-based machine learning techniques</a>
+    - <a href='https://www.medrxiv.org/content/10.1101/2020.06.01.20118810v1' target='_blank'>Collecting data on HIV-related mortality during household surveys: a randomized validation study in Malawi</a>
     
     - *YouTube videos:* <a href='https://www.youtube.com/watch?v=j8fJGV17Hcg' target='_blank'>Survey Research in the Digital Age</a>, <a href='https://www.youtube.com/watch?v=SLAi9v5CCnM' target='_blank'>Probability and Non-Probability Sampling</a>, <a href='https://www.youtube.com/watch?v=_vecQs7aB6o' target='_blank'>Combining Surveys and Big Data</a>, <a href='https://www.youtube.com/watch?v=cYyu5Ex0twE' target='_blank'>Moving Beyond Simple Experiments</a>"
-     
+    - name: "**10:30-11:00** Invited Presentation: Open science and reproducible research in the digital age"
     - name: "**11:30-12:30** Collecting mortality data via mobile phone surveys in countries with limited civil registration and vital statistics (CRVs).
     <br/> 
     <br/> 
     A key goal of HIV prevention and treatment programs worldwide is to end the epidemic of HIV/AIDS by 2030. However, there are limited representative data on HIV/AIDS mortality in many African countries. This presentation will highlight a novel method for collecting representative data on mortality in countries with limited civil registration and vital statistics."
-    - name: "**12:30-13:00** Tutorials"
+    - name: "**12:30-13:00** Reflections"
     - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Tutorial: Machine Learning in R for beginners"
+    - name: "**14:00-15:30** Tutorial: Introduction to Regular Expressions (Regex) in R"
     - name: "**15:30-18:00** Group Exercises"
     - name: "**18:00-** Dinner"
 
@@ -121,9 +119,9 @@
     <br/> 
     Required Readings:
     
-    - <a href='https://doi.org/10.1371/journal.pcbi.1008117' target='_blank'>Real-time estimation of disease activity in emerging outbreaks using internet search information</a>
+    - <a href='https://journals.sagepub.com/doi/abs/10.1177/0886260520960110' target='_blank'>Predicting the vulnerability of women to intimate partner violence in South Africa: Evidence from tree-based machine learning techniques</a>
     
-    - <a href='https://ojs.aaai.org/index.php/ICWSM/article/view/3360' target='_blank'>Using search queries to understand health information needs in Africa</a>
+    - <a href='https://www.sciencedirect.com/science/article/pii/S2352827321001117' target='_blank'>A scoping review on the use of machine learning in research on social determinants of health: Trends and research prospects</a>
     
     - <a href='https://doi.org/10.2196/24425' target='_blank'>COVID-19 misinformation spread in eight countries: Exponential growth modeling study</a>
     
@@ -136,7 +134,7 @@
     - name: "**10:30-12:00** Introduction to Internet Search Data."
     - name: "**12:00-13:00** Tutorials"
     - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Tutorials: Invited Presentation: Open science and reproducible research in the digital age"
+    - name: "**14:00-15:30** Tutorial: Machine Learning in R for beginners"
     - name: "**15:30-18:00** Group Exercises"
     - name: "**18:00-** Dinner" 
 
