--- a/_data/2022/sydney/schedule.yml
+++ b/_data/2022/sydney/schedule.yml
@@ -86,5 +86,5 @@ name: Text As Data
     - name: "**09:30-10:00** Coffee/tea"
     - name: "**10:00-12:30** Project work"
     - name: "**12:30-13:00** Lunch break"
-    - name: "**13:00-14:30** SSSHARC Tank"
+    - name: "**13:00-14:30** SSSHARC Tank - group projects final presentations"
     - name: "**14:30-15:00** Closing session"
