fixed participants' pic file extension

--- a/_data/2022/singapore/participants.yml
+++ b/_data/2022/singapore/participants.yml
@@ -11,7 +11,7 @@
   bio: "Annabel is a PhD student in Communications and New Media in the National University of Singapore. Her research interests include health communication, public health and socio-psychology of social media."
 
 - name: Catalina Udani
-  image: /assets/images/catalina-sg.jpg
+  image: /assets/images/catalina-sg.JPG
   bio: "Catalina Mica Udani is a current PhD student in Political Science at the University of Pennsylvania. Her research interests include conflict, immigration, and human rights. She studies how international conflict affects individual domestic outcomes and social identities, with a focus on nondemocratic states in the global south. Her dissertation examines how diplomatic sanctions may drive change in a state’s migration policy and human rights social practice."
 
 - name: Chuanhui Wu
@@ -51,7 +51,7 @@
   bio: "Liaw Pey Wen is a Ph.D Student at the Department of Malay Studies, National University of Singapore. Her research investigates the Malay monarchy's utilization of digital media as its survival strategies. She receives her MA in Communication from National Chengchi University in Taiwan. She is recognised for in-depth writing about human-interest stories. She is also a member of Freedom Film Network."
 
 - name: Rakoon Piyanontalee
-  image: /assets/images/rakoon-sg.jpg
+  image: /assets/images/rakoon-sg.JPG
   bio: "Rakoon Piyanontalee is an assistant research professor with the Center for International Human Resource Studies within the School of Labor and Employment Relations at the Pennsylvania State University (USA). His research examines the impact of human resource management practices on teams, work units, and organizational outcomes."
 
 - name: Siew Keong Chung
@@ -79,7 +79,7 @@
   bio: "Ying Kiat is a PhD student at National University of Singapore’s School of Computing. His current research interest is to develop and apply computational tools on the issue of polarisation and echo chamber in the society. Prior to starting his PhD, he served for many years in Singapore’s public service."
 
 - name: Yipeng Xi
-  image: /assets/images/yipeng-sg.jpg
+  image: /assets/images/yipeng-sg.JPG
   bio: "Yipeng Xi is a PhD candidate in the Department of Communications and New Media at National University of Singapore. His research interests lie in digital activism and digital culture in authoritarian contexts. He seeks to integrate computational methods with critical insight from collective behavior theory."
 
 - name: Yuanyuan Wu
@@ -87,5 +87,5 @@
   bio: "Yuanyuan Wu is a doctoral student in the Department of Communication and New Media at National University of Singapore. Her research interests mainly extend to health-related misinformation, media psychology and media effect. She is particularly interested in exploring media related to alternative medicine."
 
 - name: Zicheng Wu
-  image: /assets/images/zicheng-sg.png
+  image: /assets/images/zicheng-sg.PNG
   bio: "Zicheng Zhu is a doctoral student in the Department of Communications and New Media at National University of Singapore. Her research interest includes digital well-being and game studies, lying at the intersection of communication and human-computer interaction. She is currently interested in understanding players' tension between play and non-play and helping people develop an intentional relationship with technology."  
