--- a/_data/2022/duke/schedule.yml
+++ b/_data/2022/duke/schedule.yml
@@ -51,10 +51,10 @@
   name: Experiments in the Digital Era
   events:
     - name: "9:00 - 9:15 Check In"
-    - name: "9:15 - 11:00 Lisa Argyle (Brigham Young University)"
+    - name: "9:15 - 11:00 Lisa Argyle (Brigham Young University): Computational Advances in Experimental Social Science Research"
     - name: "11:00 - 11:15 Coffee Break"
     - name: "11:15 - 12:00 Lisa Argyle continued"
-    - name: "12:00 - 1:00 Lunch"
+    - name: "12:00 - 1:00 Lunch and Guest Lecture: Daniel Argyle, Natural Language Processing"
     - name: "1:00 - 2:30 Group Exercises"
     - name: "2:30 - 3:00 Break"
     - name: "3:00 - 4:30 Group Exercises"
