--- a/_data/2022/sydney/schedule.yml
+++ b/_data/2022/sydney/schedule.yml
@@ -1,49 +1,54 @@
 - date: 2022-06-20
-name: Introduction and Ethics
+  name: Introduction and Ethics
   events:
     - name: "**09:00-10:00** Arrivals, coffee/tea"
-    - name: "**10:00-11:30** Welcome and introduction to computational social science" <br/> *Olga Boichak, Eduardo Altmann, Tristram Alexander, Lee Wallace*
-    - name: "**11:30-12:30** Human research ethics" <br/> *Olga Boichak*
+    - name: "**10:00-11:30** Welcome and introduction to computational social science <br/> *Olga
+      Boichak, Eduardo Altmann, Tristram Alexander, Lee Wallace*"
+    - name: "**11:30-12:30** Human research ethics <br/> *Olga Boichak*"
     - name: "**12:30-13:00** Lunch break"
-    - name: "**13:00-14:30** Human research ethics (group exercise)" <br/> *Olga Boichak*
-    - name: "**14:30-16:00** Human research ethics (workshop)" <br/> *Kate Lowrie, Alan Hales*
+    - name: "**13:00-14:30** Human research ethics (group exercise) <br/> *Olga Boichak*"
+    - name: "**14:30-16:00** Human research ethics (workshop) <br/> *Kate Lowrie, Alan Hales*"
     - name: "**16:00-17:00** Participant lightning talks (part 1)"
 
 - date: 2022-06-21
-name: APIs and Digital Trace Data
+  name: APIs and Digital Trace Data
   events:
     - name: "**09:00-9:30** Coffee/tea"
-    - name: "**9:30-11:00** Academic research using the Twitter API (workshop)" <br/> *Suhem Parack*
-    - name: "**11:00-12:30** Collecting digital trace data" <br/> *Tristram Alexander*
+    - name: "**9:30-11:00** Academic research using the Twitter API (workshop) <br/> *Suhem Parack*"
+    - name: "**11:00-12:30** Collecting digital trace data <br/> *Tristram Alexander*"
     - name: "**12:30-13:00** Lunch break"
-    - name: "**13:00-14:00** Research data management" <br/> *Simon Musgrave, Ben Foley, Sam Hames*
-    - name: "**14:00-16:00** Collecting digital trace data (group exercise" <br/> *Tristram Alexander*
+    - name: "**13:00-14:00** Research data management <br/> *Simon Musgrave, Ben Foley, Sam Hames*"
+    - name: "**14:00-16:00** Collecting digital trace data (group exercise <br/> *Tristram Alexander*"
     - name: "**16:00-17:00** Participant lightning talks (part 2)"
 
 - date: 2022-06-22
-name: Text As Data
+  name: Text As Data
   events:
     - name: "**09:30-10:00** Coffee/tea"
-    - name: "**10:00-12:30** Automated text analysis: corpus approaches" <br/> *Simon Musgrave, Ben Foley, Sam Hames*
+    - name: "**10:00-12:30** Automated text analysis: corpus approaches <br/> *Simon Musgrave, Ben
+      Foley, Sam Hames*"
     - name: "**12:30-13:00** Lunch break"
-    - name: "**13:00-15:30** Automated text analysis: network and sentiment analysis" <br/> *Simon Musgrave, Ben Foley, Sam Hames*
+    - name: "**13:00-15:30** Automated text analysis: network and sentiment analysis <br/> *Simon
+      Musgrave, Ben Foley, Sam Hames*"
     - name: "**15:30-17:00** Project pitches"
     
- - date: 2022-06-23
- name: Mixed Methods
+- date: 2022-06-23
+  name: Mixed Methods
   events:
     - name: "**09:30-10:00** Coffee/tea"
-    - name: "**10:00-11:00** Mapping Online Problematic Content: Mixing Qualitative Approaches with State-of-the-art Machine Learning" <br/> *Marian-Andrei Rizoiu*
-    - name: "**11:00-12:30** Surveys in the digital age" <br/> *Olga Boichak"
+    - name: "**10:00-11:00** Mapping Online Problematic Content: Mixing Qualitative Approaches with
+       State-of-the-art Machine Learning <br/> *Marian-Andrei Rizoiu*"
+    - name: "**11:00-12:30** Surveys in the digital age <br/> *Olga Boichak"
     - name: "**12:30-13:00** Lunch break"
     - name: "**15:30-17:00** Project work: composition of teams, research design"
     
- - date: 2022-06-24
- name: Computational Social Science Fair (Data61 Eveleigh campus)
+- date: 2022-06-24
+  name: Computational Social Science Fair (Data61 Eveleigh campus)
   
- - date: 2022-06-27
- name: Academy of the Social Sciences in Australia Workshop (Day 1) 
-    - name: "**09:00-9:30** Welcome and Acknowledgement of Country" <br/> *Olga Boichak, Nick Enfield, Simon Jackman, Lee Wallace*"
+- date: 2022-06-27
+  name: Academy of the Social Sciences in Australia Workshop (Day 1) 
+  events:
+    - name: "**09:00-9:30** Welcome and Acknowledgement of Country <br/> *Olga Boichak, Nick Enfield, Simon Jackman, Lee Wallace*"
     - name: "**9:30-11:00** Panel 1. Computational social science in Australia: research approaches"
     - name: "**11:00-11:30** Coffee break"
     - name: "**11:30-13:00** Panel 2. Computational social science in Australia: infrastructure and capabilities"
@@ -52,9 +57,10 @@ name: Text As Data
     - name: "**15:00-16:00** Discussion and debrief"
     - name: "**16:00-17:00** Dinner"
     
-     - date: 2022-06-28
- name: Academy of the Social Sciences in Australia Workshop (Day 2) 
-    - name: "**09:00-9:30** Welcome and goals for the day" <br/> *Olga Boichak, Tristram Alexander, Jonathon Hutchinson*"
+- date: 2022-06-28
+  name: Academy of the Social Sciences in Australia Workshop (Day 2) 
+  events:
+    - name: "**09:00-9:30** Welcome and goals for the day <br/> *Olga Boichak, Tristram Alexander, Jonathon Hutchinson*"
     - name: "**9:30-11:00** Panel 4. Teaching computational social science"
     - name: "**11:00-11:30** Coffee break"
     - name: "**11:30-13:00** Panel 5. Practice of social research in the age of big data"
@@ -63,25 +69,26 @@ name: Text As Data
     - name: "**16:00-16:30** Closing remarks"
     - name: "**17:00-18:00** The Science of Success (Australian premiere, documentary screening and discussion with Australian director Annamarie Talas"
  
- - date: 2022-06-29
- name: Specific Applications Part 1: Studying Content and Dynamics
+- date: 2022-06-29
+  name: "Specific Applications Part 1: Studying Content and Dynamics"
   events:
     - name: "**09:30-10:00** Coffee/tea"
-    - name: "**10:00-12:30** New and emerging methods for studying online influence operations" <br/> *Timothy Graham*
+    - name: "**10:00-12:30** New and emerging methods for studying online influence operations
+       <br/> *Timothy Graham*"
     - name: "**12:30-13:00** Lunch break"
-    - name: "**13:00-15:30** The Image Machine" <br/> *Daniel Angus*
+    - name: "**13:00-15:30** The Image Machine <br/> *Daniel Angus*"
     - name: "**15:30-17:00** Project work"
     
- - date: 2022-06-30
- name: Specific Applications Part 2: Models and Modelling
+- date: 2022-06-30
+  name: "Specific Applications Part 2: Models and Modelling"
   events:
     - name: "**09:30-10:00** Coffee/tea"
-    - name: "**10:00-12:30** Agent-based modelling" <br/> *Jason Thompson
+    - name: "**10:00-12:30** Agent-based modelling <br/> *Jason Thompson"
     - name: "**12:30-13:00** Lunch break"
     - name: "**13:00-17:00** Project work"
     
- - date: 2022-07-01
- name: Season Finale
+- date: 2022-07-01
+  name: Season Finale
   events:
     - name: "**09:30-10:00** Coffee/tea"
     - name: "**10:00-12:30** Project work"
