--- a/_data/2022/sydney/schedule.yml
+++ b/_data/2022/sydney/schedule.yml
@@ -38,7 +38,7 @@
     - name: "**09:30-10:00** Coffee/tea"
     - name: "**10:00-11:00** Mapping Online Problematic Content: Mixing Qualitative Approaches with
        State-of-the-art Machine Learning <br/> *Marian-Andrei Rizoiu*"
-    - name: "**11:00-12:30** Surveys in the digital age <br/> *Olga Boichak"
+    - name: "**11:00-12:30** Surveys in the digital age <br/> *Olga Boichak*"
     - name: "**12:30-13:00** Lunch break"
     - name: "**15:30-17:00** Project work: composition of teams, research design"
     
@@ -60,7 +60,7 @@
 - date: 2022-06-28
   name: Academy of the Social Sciences in Australia Workshop (Day 2) 
   events:
-    - name: "**09:00-9:30** Welcome and goals for the day <br/> *Olga Boichak, Tristram Alexander, Jonathon Hutchinson*"
+    - name: "**09:00-9:30** Welcome and goals for the day <br/> *Olga Boichak, Eduardo Altmann, Tristram Alexander, Jonathon Hutchinson*"
     - name: "**9:30-11:00** Panel 4. Teaching computational social science"
     - name: "**11:00-11:30** Coffee break"
     - name: "**11:30-13:00** Panel 5. Practice of social research in the age of big data"
@@ -83,7 +83,7 @@
   name: "Specific Applications Part 2: Models and Modelling"
   events:
     - name: "**09:30-10:00** Coffee/tea"
-    - name: "**10:00-12:30** Agent-based modelling <br/> *Jason Thompson"
+    - name: "**10:00-12:30** Agent-based modelling <br/> *Jason Thompson*"
     - name: "**12:30-13:00** Lunch break"
     - name: "**13:00-17:00** Project work"
     
