--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -97,11 +97,11 @@
              
           - SICSS at Age 5: An Interview with Co-Founders Chris Bail and Matt Salganik for SICSS-Howard/Mathematica 2021 [(video)](https://youtu.be/PGhI39loSYg)
 
-          - Terri Adams, Ph.D., Faculty Co-Sponsor & Professor, Department of Sociology and Criminology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology, Howard University [(video)](https://youtu.be/2R_w-PQbPD0)
+          - Terri Adams, Ph.D., Faculty Co-Sponsor & Professor, Department of Sociology and Criminology, Associate Dean for Research with the Graduate School, Deputy Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology, Howard University [(video)](https://youtu.be/2R_w-PQbPD0)
 
-          - Nicole Jenkins, Ph.D., Assistant Professor, Department of Sociology and Criminology, Howard University & SICSS-Howard/Mathematica alumni 2021
+          - Nicole Jenkins, Ph.D., Faculty Co-Sponsor & Assistant Professor, Department of Sociology and Criminology, Howard University & SICSS-Howard/Mathematica alumni 2021
           
-          - Amy Yeboah Quarkume, Ph.D., Associate Professor, Africana Studies, Department of Afro-American Studies, Howard University
+          - Amy Yeboah Quarkume, Ph.D., Faculty Co-Sponsor & Associate Professor, Africana Studies, Department of Afro-American Studies, Howard University
 
           - Calvin Hadley, Event Co-Sponsor & Senior Advisor for Strategic Initiatives, Office of the President, Howard University [(video)](https://youtu.be/y-dp19EpEcU)
 
@@ -280,13 +280,13 @@
         **Speakers**
       
           - [Bhaso Ndzendze, Ph.D., Senior Lecturer and Head of Department, Politics and International Relations, University of Johannesburg](https://bhasondzendze.co.za)
+          
+          - [Felicia Odamtten, Founder and Director of The Black Economists Network](https://www.tben.co.uk/the-team)
+          
+          - [Evans Osabuohien, Professor of Economics and Head of Department, Economics & Development Studies, Covenant University, Nigeria](https://evansosabuohien.com/)
 
           - [Lebogang Ramafoko, Executive Director of Oxfam South Africa](https://docs.google.com/document/d/1cs3rwShBjHTNd6AN8swy9eRR_fQrS0aA/edit)
           
-          - Speaker TBA
-          
-          - Speaker TBA
-
 
           
         **Moderator**
